Changes to add picture back'

--- a/css/abarbershop.webflow.css
+++ b/css/abarbershop.webflow.css
@@ -133,10 +133,12 @@ p {
   padding-bottom: 257px;
   border-bottom: 0px none rgba(0, 0, 0, 0);
   background-image: url(../images/l.jpg);
-  background-position: 50% -260px;
+  background-position: 50%;
   background-size: cover;
-  background-repeat: no-repeat no-repeat;
   background-attachment: scroll;
+  background-repeat: no-repeat;
+  max-width: 800px;
+  margin: 0 auto;
 }
 .section.white {
   box-shadow: none;
